removed CSS transition for the refresh column button to fix the flickering problem

--- a/dev/webapp/css/base.css
+++ b/dev/webapp/css/base.css
@@ -487,10 +487,10 @@ html, body {
 	right: 5px;
 	opacity: 0;
 	
-	-moz-transition: all 0.2s ease-out;
+	/*-moz-transition: all 0.2s ease-out;
 	-o-transition: all 0.2s ease-out;
 	-webkit-transition: all 0.2s ease-out;
-	transition: all 0.2s ease-out;
+	transition: all 0.2s ease-out;*/
 }
 
 .panel:hover .ui-header .ui-controlgroup {
